# accounting-sdk

./: .gitignore  pyproject.toml
notebooks/: .env  admin.ipynb  alice.ipynb  bob.ipynb
src/accountingSDK/: __init__.py  cli.py  core.py
src/syft_accounting_sdk/: core.py  schemas.py
